--- a/style/index.css
+++ b/style/index.css
@@ -15,7 +15,7 @@
 }
 body {
 	margin: 0;
-	background: url(/Camagru_2/img/Background.jpg);
+	background: url(/Camagru/img/Background.jpg);
 	background-color: #0000007a;
    	background-size: cover;
    	background-position: relative;
