--- a/style/gallery.css
+++ b/style/gallery.css
@@ -7,6 +7,37 @@ body {
 	font-family: monospace;
 }
 
+.msg{
+	padding-top: 10px;
+	padding-bottom: 15px;
+	font-size: 18px;
+	align-content: center;
+	font-weight: bold;
+	height: 300px;
+	font-size: 15px;
+	width: 100%;
+	z-index: 1;
+}
+
+.success{
+	color: rgb(255, 0, 0);
+}
+
+#v_login {
+	border:  solid #66fcf1;
+	position: fixed;
+	top: 2%;
+	bottom: 0;
+	text-align: center;
+	left: 0;
+	right: 0;
+	width: 250px;
+	height: 60px;
+	margin: auto;
+	background-color: #000000;
+	padding: 5px;
+}
+
 #header {
 	width: 100%;
 	top: 0%;
